--- a/app/views/home/Bud.html.erb
+++ b/app/views/home/Bud.html.erb
@@ -40,4 +40,7 @@ the most common way people smoke weed although it changes depending on who you s
   Indica creates a body high as in, you feel it in your limbs; throughout you're entire body. Indca is great to smoke if you want to just chillout, release stress tension, and go to sleep. Probably the most popular
   Strain is Grandaddy Purp(le). I honestly could'nt tell you why but is a very great indica strain that has a very nice taste and very potent effects. If you can get your hands on it, enjoy it and dont
   take it for granted. So overall Indica Dominate Strains are great for relaxation, chilling out, and just feeding the munchies.</p>
+<br>
+<h3>Sativa</h3>
+<p>Sativa Dominate Strains create what is called a head high. I don't think </p>
 </div>
