--- a/app/views/home/Bud.html.erb
+++ b/app/views/home/Bud.html.erb
@@ -3,24 +3,24 @@
 <%= image_tag("kanofblissIMG/flower.png", :alt => "") %>
 
 <h2>Smoking and Rolling</h2>
-<p>Most of this section hopefully is common knowlege, but for the newbies that might show up here it is</p>
-<p>there are two common ways of smoking weed, rolling it or using a glass piece</p>
+<p>Most of this section hopefully is common knowlege, but for the newbies that might show up, here it goes.</p>
+<p>there are two common ways of smoking weed, rolling it or using a glass pieces</p>
 <p>I will talk more about glass pieces on the Glass Page so I'll focus more on rolls</p>
 <p>for the most part you'll either have Blunts or Joints</p>
 <div class="Blunts">
   <h3>Blunts</h3>
-  <p>Im sure many of you have heard of Swishers and Backwoods, these are cirgars that you can buy at a smoke shop, cornerstores, basically anywhere that sells tobacco products.</p>
-  <p>the way you use Swishers and Backwoods is by gutting the cigar (taking out the tobacco already pre rolled). some people will cut the wrap open to clean it out but if you dont
+  <p>I'm sure many of you have heard of Swishers and Backwoods, these are cigars(cigarillos) that you can buy at a smoke shop, cornerstores, basically anywhere that sells tobacco products.</p>
+  <p>The way you use Swishers and Backwoods is by gutting the cigar (taking out the tobacco already pre rolled). Some people will cut the wrap open to clean it out but if you don't
     have anything to cut with, you can carefully unroll the leaf and clean it that way. After you gut the leaf can fill it with weed and roll it back up.
     A few reasons for smoking these blunts is flavor and how easy it is to roll. Tobacco leaves are pretty sticky after you lick them and because it was already rolled it begins
     to curl so its east to roll it back up again. Also Swishers and Backwoods come in diffrent flavors so it adds another layer of pleasure to smoking. Some downsides to smoking
-    tobacco leaf blunts is well, its tobacco so you're still putting yourself at risk of common cancers like lung cancer and stuff like that, although it is much less then like a cigarette.</p>
-  <p>the second type of blunt (I guess) are hemp wraps or just tobacco free wraps. the most common of these are King Palms and High Hemp Wraps. Both of these have no tobacco in them and High Hemps
+    tobacco leaf blunts is well, it's tobacco so you're still putting yourself at risk of common cancers like lung cancer and stuff like that, although it is much less then like a cigarette.</p>
+  <p>The second type of blunt (I guess) are hemp wraps or just tobacco free wraps. The most common of these are King Palms and High Hemp Wraps. Both of these have no tobacco in them and High Hemps
   come in diffrent flavors. High Hemp wraps are sticky just like a Swisher or a Backwood and take just a little bit more effort to roll. one complaint about Hemp Wraps is that they are very thin and
   are prone to ripping much easier. I do reccomend High Hemps if you want to get practice in for rolling blunts infront of yout friends and stuff becuse they come with filter tips to keep bud out of
-  your mouth and smooter smoke as well as a small cardboard straw you can use to pack it tight. King Palms are a personal favorite of mine because of a few things. King Palms are basically the shell of
-  a cigar but it is actually a palm leaf. This means that they dont have to be rolled, all you do is pack the weed in with the provided packing tool and you're ready to smoke. king palms are very slow
-  burning and the filter is a corn husk filter. this provides the coolest and smoothest smoke I think you will ever expirece that doesn't come out of a glass piece.</p>
+  your mouth and smooter smoke as well as a small cardboard straw you can use to pack it tight. King Palms are basically the shell of a cigar but it is actually a palm leaf. This means that they dont
+  have to be rolled, all you do is pack the weed in with the provided packing tool and you're ready to smoke. King Palms are very slow
+  burning and the filter is a corn husk filter. This provides the coolest and smoothest smoke I think you will ever expirece that doesn't come out of a glass piece.</p>
 
 </div>
 <div class="Joints">
@@ -42,5 +42,17 @@ the most common way people smoke weed although it changes depending on who you s
   take it for granted. So overall Indica Dominate Strains are great for relaxation, chilling out, and just feeding the munchies.</p>
 <br>
 <h3>Sativa</h3>
-<p>Sativa Dominate Strains create what is called a head high. I don't think </p>
+<p>Sativa Dominate Strains create what is called a head high. I don't think old heads have a saying for sativa sadly. Sativa is great for productivity. It can generate feelings of euphoria, reduce stress and anxiety, and more creatvive
+then Indica which makes you more relaxed. The most popular strains are Sour Deisel, Haze, and Northern Lights. this is most likely because they have a higher THC content (17-20%) making it very potent. These are Common strains so their easy to
+get your hands on and keep in rotation. </p>
+<br>
+<h3>Hybrid</h3>
+<p>This section is short</p>
+<p>Hybrid Weed is a combination of Both Indica and Sativa, creating varying effects depending on wether Indica and Sativa is the dominate (parent) strain in the hybrid.
+when smoking hybrid it's always good to look up the strain on weed</p>
+</div>
+
+<div class="Growing">
+  <h2>Growing</h2>
+  <h3>This section is under construction and will be added at a (much) later date.</h3>
 </div>
