finish budPage, start cartPage

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,3 +83,8 @@ img{
   margin-right: 15%;
   margin-bottom: 10%;
 }
+.Center{
+  text-align: center;
+  margin-left: 15%;
+  margin-right: 15%;
+}
