--- a/app/views/home/Carts.html.erb
+++ b/app/views/home/Carts.html.erb
@@ -39,5 +39,5 @@ You should also look for a sticker with batch number and id. If you look the bat
 First crap oil. early I mentioned the "bubble test", this is when you flip your cart upside down and watched how fast the bubble moved. The slower the better.
 Now the scum of the earth that make shitty carts and only care about personal profit, use fillers to make the oil thicker and even change the color. Originally you could see if your oil was good by the color of the oil.
 Nice clearish golden-brown color meant you had a good cart, along with the bubble test. neither test works anymore. What you can do is check your packaging.
-Big Brands like: King Pens, Heavy Hitters, Rove, Dr.Zodiak, and many more are often faked. </p>
+Big Brands like: King Pens, Heavy Hitters, Rove, Dr. Zodiak, Stiiizy, and many more are often faked. </p>
 </div>
