update carts and gemfile.lock

--- a/app/views/home/Carts.html.erb
+++ b/app/views/home/Carts.html.erb
@@ -3,41 +3,46 @@
 <%= image_tag("kanofblissIMG/cart.svg", :alt => "") %>
 <div class="Center">
   <h2>What is a Cart?</h2>
-  <p >Carts are Cannabis extract called distillate which is a wax that can be vaporized by a 510 thread battery.
-     Wax tech is still pretty new which is why if you heard/watched the news you hear alot of people talking about vaping realated illnesses and even death.
-     This issue is the reason I am giving it it's own page instead of lumping it in with the other types of extracts.
+  <p >Carts are Cannabis extract called distillate which is a wax that can be vaporized by a 510 thread battery. Wax tech is still pretty new which is why if you heard/watched the news you hear alot of people talking about vaping realated illnesses and
+    even death. This issue is the reason I am giving it it's own page instead of lumping it in with the other types of extracts.
   </p>
 </div>
 
 <div class="Center">
   <h2>Black Market Carts</h2>
-  <p>Black Market Carts are carts that are unregulated by the government and are considered an illegal products.
-     Black Market Carts are making a bad name for themselves because they are the main contriutor to the vaping deaths.
-     Unregulated products means anyone who makes them can fill your cart with all types fillers like PG (Propylene Glycol),
-     VG(Vegetable Glycerin), Vitamin E Acetate, Terpenes, and in some of the worse cases K2 (Sythetic Weed). PG/VG are fillers that are usually found in
-     E-liquid or Nic Juice. they can help simulate the feel of smoking a real cigarette, so they are put in carts to simulate real smoking. PG/VG haven't posed
-     Much of a problem in term of killing people so if you see that its in your cart don't trip to hard. Terpenes or just terps is a filler that can add flavor back into the distillate.
-     during the distilling process, Cannabis loses much of its natural flavor so some people will add terps during the distillate process to give the vaping expirence more flavor.
-     Vitamin E Acetate is the main culprit in these vaping related illnesses. Vitamin E on its own is perfectly harmless and actually helpful to the body,but when the "sticky and honey-like [substance is vaporized], it can hang around in the lungs, health officials said, interfering with how they function."
-    (Vox News Report on CDC) Vitamin E Acetate is used as a thickining agent, this means that the "bubble test" doesn't work anymore (covered later).
-    K2 or Synthetic weed is sometimes used instead of natural THC because its is much cheaper to obtain. K2 is extremely dangerous which is why if you're in an illegal state, STOP USING CARTS.
-    </p>
+  <p>Black Market Carts are carts that are unregulated by the government and are considered an illegal products. Black Market Carts are making a bad name for themselves because they are the main contriutor to the vaping deaths. Unregulated products
+    means anyone who makes them can fill your cart with all types fillers like PG (Propylene Glycol), VG(Vegetable Glycerin), Vitamin E Acetate, Terpenes, and in some of the worse cases K2 (Sythetic Weed). PG/VG are fillers that are usually found in
+    E-liquid or Nic Juice. they can help simulate the feel of smoking a real cigarette, so they are put in carts to simulate real smoking. PG/VG haven't posed Much of a problem in term of killing people so if you see that its in your cart don't trip to
+    hard. Terpenes or just terps is a filler that can add flavor back into the distillate. during the distilling process, Cannabis loses much of its natural flavor so some people will add terps during the distillate process to give the vaping expirence
+    more flavor. Vitamin E Acetate is the main culprit in these vaping related illnesses. Vitamin E on its own is perfectly harmless and actually helpful to the body,but when the "sticky and honey-like [substance is vaporized], it can hang around in the
+    lungs, health officials said, interfering with how they function." (Vox News Report on CDC) Vitamin E Acetate is used as a thickining agent, this means that the "bubble test" doesn't work anymore (covered later). K2 or Synthetic weed is sometimes
+    used instead of natural THC because its is much cheaper to obtain. K2 is extremely dangerous which is why if you're in an illegal state, STOP USING CARTS.
+  </p>
 </div>
 <div class="Center">
-  <h2>How To: tell if you have a real cart, fake cart, or black market cart. </h2>
-  <p>this section I am splitting into 3 parts. </p>
-<h3>Real Carts.</h3>
-<p>the easist way to tell if you have a real cart or not is to go buy it yourself or soemone you trust go buy it from a licensed dispensary.
-   When most people ask if they have a real cart they really mean do I have real oil. JUST BECAUSE IT IS A BLACK MARKET CART DOES NOT MEAN IT IS FAKE.
- This is a very hard point for me to stress. Not all BM carts are full of crap. Some companies decide to run the risk of being shut down and jailed beacuse selling your product on the black market is cheaper for them.
-which is why it is possible to get good oil for 30+ dollars. The companies do not have to pay fees if the government doesn't know they exist. Anyways back on topic. Dispensary carts are required to have a state issued warning label on the packaging. (I live in California so for the most part these are the laws I will be speaking on)
-The packaging must be child proof. Usually its going to be in a box that may show a photo of the cart but it won't have a cutout where you see the actual cart. A lot of brands that have had problems of fake versions of their products have been making half gram only cartriges, new packaging, disposables only, stuff like that.
-You should also look for a sticker with batch number and id. If you look the batch number up you should be able to find the lab test, if the test link up with the cart you have then you have a nice real cart. Many brands are also switching to CCELL carts which I will get more into later.
-</p>
-<h3>Fake Carts.</h3>
-<p>When I say fake cart I mean two things, absolute crap oil, like hotdog water can't even discribe the quality, and, a fake version of a brand vs. the real version.
-First crap oil. early I mentioned the "bubble test", this is when you flip your cart upside down and watched how fast the bubble moved. The slower the better.
-Now the scum of the earth that make shitty carts and only care about personal profit, use fillers to make the oil thicker and even change the color. Originally you could see if your oil was good by the color of the oil.
-Nice clearish golden-brown color meant you had a good cart, along with the bubble test. neither test works anymore. What you can do is check your packaging.
-Big Brands like: King Pens, Heavy Hitters, Rove, Dr. Zodiak, Stiiizy, and many more are often faked. </p>
+  <h2>Tell if you have a real cart, fake cart, or black market cart.
+  </h2>
+
+  </p>
+  <h3>Real Carts.</h3>
+  <p>the easist way to tell if you have a real cart or not is to go buy it yourself or soemone you trust go buy it from a licensed dispensary. When most people ask if they have a real cart they really mean do I have real oil. JUST BECAUSE IT IS A BLACK
+    MARKET CART DOES NOT MEAN IT IS FAKE. This is a very hard point for me to stress. Not all BM carts are full of crap. Some companies decide to run the risk of being shut down and jailed beacuse selling your product on the black market is cheaper for
+    them. which is why it is possible to get good oil for 30+ dollars. The companies do not have to pay fees if the government doesn't know they exist. Anyways back on topic. Dispensary carts are required to have a state issued warning label on the
+    packaging. (I live in California so for the most part these are the laws I will be speaking on) The packaging must be child proof. Usually its going to be in a box that may show a photo of the cart but it won't have a cutout where you see the actual
+    cart. A lot of brands that have had problems of fake versions of their products have been making half gram only cartriges, new packaging, disposables only, stuff like that. You should also look for a sticker with batch number and id. If you look the
+    batch number up you should be able to find the lab test, if the test link up with the cart you have then you have a nice real cart. Many brands are also switching to CCELL carts which I will get more into later.
+  </p>
+  <h3>Fake Carts.</h3>
+  <p>When I say fake cart I mean two things, absolute crap oil, like hotdog water can't even discribe the quality, and, a fake version of a brand vs. the real version. First crap oil. early I mentioned the "bubble test", this is when you flip your cart
+    upside down and watched how fast the bubble moved. The slower the better. Now the scum of the earth that make shitty carts and only care about personal profit, use fillers to make the oil thicker and even change the color. Originally you could see if
+    your oil was good by the color of the oil. Nice clearish golden-brown color meant you had a good cart, along with the bubble test. neither test works anymore. What you can do is check your packaging. Big Brands like: King Pens, Heavy Hitters, Rove,
+    Dr. Zodiak, Stiiizy, and many more are often faked.
+  </p>
+
+  <h3>Black Market Carts (BMC)</h3>
+  <p>This section to me is very interesting to me. I made it it's own section because I believe that fake and bm are two diffrent things. based off of my bm knowlege (Bay Area) some brands opt to sell directly to the Black/Gray Market.
+    Another thing I've noticed is that some legal dispensaries will dump product into the BM because they can make more money since that route is not taxed. I can't name any brands because that would just be acusations and if they do really do that its not my place lmao.
+    Anyways, BMC are not always bad. One thing to note about BMC is sometimes people will fill a cart with good oil but will use fake packaging from an established brand. One reason is because buying those in packages in bulk from china is so cheap. Another reason is that its hard to come up with your own packaging and someone to catually make it.
+    Some street plugs do actually care about they're costumers so they do their best to find clean oil. With that being said the next section is about how to tell if you have bad oil. 
+  </p>
 </div>
