--- a/app/views/home/Carts.html.erb
+++ b/app/views/home/Carts.html.erb
@@ -23,7 +23,7 @@
   <h2>Tell if you have a real cart, fake cart, or black market cart.
   </h2>
 
-  
+
   <h3>Real Carts.</h3>
   <p>the easist way to tell if you have a real cart or not is to go buy it yourself or soemone you trust go buy it from a licensed dispensary. When most people ask if they have a real cart they really mean do I have real oil. JUST BECAUSE IT IS A BLACK
     MARKET CART DOES NOT MEAN IT IS FAKE. This is a very hard point for me to stress. Not all BM carts are full of crap. Some companies decide to run the risk of being shut down and jailed beacuse selling your product on the black market is cheaper for
@@ -40,9 +40,13 @@
   </p>
 
   <h3>Black Market Carts (BMC)</h3>
-  <p>This section to me is very interesting to me. I made it it's own section because I believe that fake and bm are two diffrent things. based off of my bm knowlege (Bay Area) some brands opt to sell directly to the Black/Gray Market.
+  <p>This section to me is very interesting to me. I made it it's own section because I believe that fake and BM are two diffrent things. based off of my BM knowlege (Bay Area) some brands opt to sell directly to the Black/Gray Market.
     Another thing I've noticed is that some legal dispensaries will dump product into the BM because they can make more money since that route is not taxed. I can't name any brands because that would just be acusations and if they do really do that its not my place lmao.
-    Anyways, BMC are not always bad. One thing to note about BMC is sometimes people will fill a cart with good oil but will use fake packaging from an established brand. One reason is because buying those in packages in bulk from china is so cheap. Another reason is that its hard to come up with your own packaging and someone to catually make it.
-    Some street plugs do actually care about they're costumers so they do their best to find clean oil. With that being said the next section is about how to tell if you have bad oil.
+    Anyways, BMC are not always bad. One thing to note about BMC is sometimes people will fill a cart with good oil but will use fake packaging from an established brand. One reason is because buying those in packages in bulk from china is so cheap. Another reason is that its hard to come up with your own packaging and someone to actually make it.
+    Some street plugs do actually care about they're costumers so they do their best to find clean oil. With that being said the next section is about how to tell if you have bad oil. If you read before the way you could test a cart used to be pretty simple, you could just look at the color, and watch how fast the bubble moved. These days with fillers and extra shit it's a little harder to test now.
+    after you take just one hit from a new cart check to see if you are getting a headache (obviously does not work if you already have one before you start), if you are getting a headache, THROW THAT SHIT OUT IT WILL KILL YOU. If your feeling chest pain, TOSS IT. If your having wet coughs not yout regular weed cough, TOSS IT.
+    it is imperitive that if you start to feel pain from your cart you toss that shit immediately. Your $20 cart is not worth risking your health. If your paying $20-$30 for a full gram, its not real oil. it will kill you no matter what your plug tells you. More ways you can check your cart is using Weedmaps, look up the cart brand on Weedmaps, if it's not there or it is there but not WM verified,
+    you should probably toss it. You can also buy at home tests for your carts, there has been discussion on the reliability but its still currently worth it. Some brands have instagram accounts, it does'nt hurt to contact the page and ask them if you have a real version of the brand. Also you can check for lab test. All real carts (in the state of California) are required to provide lab tests.
+    with all that being said the most important thing is be safe and be educated. 
   </p>
 </div>
