--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,4 +2,4 @@
  <h3>A personal index of Cannabis Related Knowledge</h3>
 <%= image_tag("kanofblissIMG/leaf.png", :alt => "") %>
 <p>On this page you will find, everything I know about about, Flower (Bud), Carts, other Extracts, Glass, and the diffrence between THC and CBD</p>
-<p>I credit lots of my growing knowledge to subreddits like r/fakecartridges, r/oilpen, r/trees, etc. much love to the people on those subreddits. </p>
+<p>Credit to the beautiful people of reddit. </p>
